# desktop-alkozon

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/desktop_alkozon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/desktop_alkozon/config/: __init__.py
src/desktop_alkozon/core/: auth.py  logger.py
src/desktop_alkozon/features/deliveries/: controller.py  service.py  views.py
src/desktop_alkozon/features/employees/: controller.py  service.py  views.py
src/desktop_alkozon/features/warehouse/: controller.py  service.py  views.py
src/desktop_alkozon/models/: api_models.py
src/desktop_alkozon/services/: api_client.py
src/desktop_alkozon/ui/pages/: login_page.py  main_menu.py
tests/: conftest.py
tests/feature/: test_deliveries.py  test_employees.py  test_warehouse.py
tests/integration/: test_integration.py
tests/ui/: test_ui.py
tests/unit/: test_api_client.py  test_auth.py  test_config.py  test_controllers.py  test_models.py
